--- a/Experiment/index_reqd.html
+++ b/Experiment/index_reqd.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Experiment Title</title>
@@ -6,28 +6,28 @@
     <meta name="viewport" content="width=device-width, user-scalable=yes, , initial-scale=1">
 </head>
 <body onload="loadExperiment()">
-    <!-- Three JS library -->
+    <!--- Three JS library --->
     <script src="../PIE/three.min.js"></script>
 
-    <!--- Detector Utility to detect absence of webgl and corresponding error -->
+    <!--- Detector Utility to detect absence of webgl and corresponding error --->
     <script src="../PIE/Detector.js"></script>
 
-    <!-- OrbitControl utility to move camera around (if required) -->
+    <!--- OrbitControl utility to move camera around (if required) --->
     <script src="../PIE/OrbitControls.js"></script>
 
-    <!-- TrackballControl utility to implement Trackball type control (if required) -->
+    <!--- TrackballControl utility to implement Trackball type control (if required) --->
     <script src="../PIE/TrackballControls.js"></script>
 
-    <!-- Data Gui utility to implement sliders and other data GUI elements (if required) -->
+    <!--- Data Gui utility to implement sliders and other data GUI elements (if required) --->
     <script src="../PIE/dat.gui.min.js"></script>
 
-    <!-- Satistics utility to track and display statistics (if required) -->
+    <!--- Satistics utility to track and display statistics (if required) --->
     <script src="../PIE/stats.min.js"></script>
 
-    <!-- The PIE Library -->
+    <!--- The PIE Library --->
     <script src="../PIE/PIElibrary.js"></script>
 
-    <!-- The Experiment Code -->
+    <!--- The Experiment Code --->
     <script src="experiment.js"></script>
 </body>
 </html>
