--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Analog Clock Reading</title>
-    <a href = "./Experiment/index.html"<h4>Go to the Presentation</h4>
+    <script>
+		window .location.href = "./Experiment/index.html";
+	</script>
 </head>
 <body>
     
