--- a/Experiment/index.html
+++ b/Experiment/index.html
@@ -4,6 +4,16 @@
     <title>Experiment Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=yes, , initial-scale=1">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121107357-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-121107357-1');
+    </script>
+
 </head>
 <body onload="loadExperiment()">
     <!-- Three JS library -->
