--- a/Experiment/index.html
+++ b/Experiment/index.html
@@ -13,6 +13,15 @@
 
       gtag('config', 'UA-121107357-1');
     </script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120952687-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-120952687-1');
+      </script>
 
 </head>
 <body onload="loadExperiment()">
